# rust-gi

./: .gitignore  .travis.yml  Cargo.toml  README.md  rustfmt.toml
net/: Cargo.toml
net/src/: client.rs  lib.rs  uri.rs
req/: Cargo.toml
req/src/: lib.rs
src/: app.rs  cache.rs  main.rs  out.rs  uri.rs
src/app/: mod.rs  statics.rs
src/cache/: error.rs  mapping.rs  mod.rs  reader.rs  writer.rs
src/request/: hash.rs  mod.rs
