[package]
name = "gi"
version = "1.4.0"
authors = ["Spaceface16518 <33424649+Spaceface16518@users.noreply.github.com>"]
description = "A command line tool to generate gitignores."
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.3"
hyper = "0.12.19"
hyper-tls = "0.3.1"
futures = "0.1.25"
