[package]
name = "gi"
version = "1.5.0"
authors = ["Spaceface16518 <33424649+Spaceface16518@users.noreply.github.com>"]
description = "A command line tool to generate gitignores."
edition = "2018"

[dependencies]
log = "0.4.6"
pretty_env_logger = "0.3.0"
reqwest = "0.9.11"
num-traits = "0.2.10"
cachedir = "0.1.1"

[profile.release]
codegen-units = 1
lto = true
