[package]
name = "net"
version = "2.2.4"
authors = ["Spaceface16518 <33424649+Spaceface16518@users.noreply.github.com>"]
edition = "2018"
description = "The networking end of rust-gi. This package aims to decrease dependence on curl (and by extension, libcurl and libc). Version 2.x uses Hyper and Tokio to preform GET requests"

[dependencies]
log = "0.4"
hyper = "0.12"
hyper-tls = "0.3"
futures = "0.1"
